--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
     "react": "^15.6.1",
     "react-apollo": "^1.4.3",
     "react-dom": "^15.6.1",
-    "react-scripts": "1.0.10"
+    "react-scripts": "1.0.10",
+    "react-table": "^6.7.4"
   },
   "scripts": {
     "start": "react-scripts start",
