--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,9 @@
     "graphql-tools": "^1.1.0",
     "react": "^15.6.1",
     "react-apollo": "^1.4.3",
+    "react-bootstrap-form": "^0.1.4-beta6",
     "react-dom": "^15.6.1",
+    "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.10",
     "react-table": "^6.7.4"
   },
