--- a/client/package.json
+++ b/client/package.json
@@ -10,10 +10,9 @@
     "graphql": "^0.10.3",
     "graphql-tag": "^2.5.0",
     "graphql-tools": "^1.1.0",
+    "prop-types": "^15.6.0",
     "react": "^15.6.1",
     "react-apollo": "^1.4.3",
-    "react-bootstrap-form": "^0.1.4-beta6",
-    "react-bootstrap-table": "^4.1.5",
     "react-dom": "^15.6.1",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.10",
